--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Brucira project</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="@mediaquery.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -112,16 +113,17 @@
     <h1>EasyA Student's App</h1>
     </div>
    </div>
-   <div class="video-section2">
-    <div class="video-box1">
+  
+   <!-- <div class="video-section6">
+    <div class="video-box6">
     <video src="video2.mp4" loop autoplay></video>
-    <h1></h1>
+    <h1 class="head-1">Oppo</h1>
     </div>
-    <div class="video-right1">
+    <div class="video-right6">
     <video src="plum-doc-video.mp4" loop autoplay></video>
-    <h1></h1>
+    <h1 class="head-1"></h1>
     </div>
-   </div>
+   </div> -->
 
    <div class="video-section3">
     <div class="video-box2">
@@ -136,11 +138,11 @@
 
    <div class="video-container">
     <div class="video-right4">
-      <img src="image1..webp" src="#">
+      <img src="image1..webp"  src="#">
       <h1>Pingsafe Website Redesign</h1>
       </div>
       <div class="image-right">
-      <img  src="image2..webp" alt="gif">
+      <img  src="image2..webp"  alt="gif">
       <h1>Cashfree Payments 
         <br>Branding</h1>
     </div>
@@ -164,7 +166,8 @@
     <h1 class="heading-cta">Top Clients</h1>
     </div>
      <div class="cta-section1">
-    <div class="box1 class">
+      
+    <div class="box1 class container3">
       <img src="Google.svg" alt="google">
       <br>
       <br>
@@ -211,7 +214,7 @@
         <br>
         <p class="para-1">Acting as extended design<br> partners, creating customer<br> side app and illustrations</p>
       </div>
-      <div class="box1">
+      <div class="box1 class">
         <img src="vedantu.jpeg" alt="google">
         <br>
         <br>
@@ -240,7 +243,7 @@
       </div>
       </div>
       <div class="button-center ">
-        <button class="btn4 hireme1-btn border1">Read Case Study</button>
+        <button class="btn4 hireme1-btn border1">See all Clients</button>
         </div>
         <div class="heading-section0">
           <h1 class="heading01">
@@ -285,7 +288,6 @@
             </div>
           </div>
         </div>
-      
-  <div class="spacer" style="height: 100vh;"></div>
+
 </body>
 </html>
